<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_account_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/primary" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bordered_container"
        android:hint="@string/hint_name"
        android:fontFamily="@font/nunito_medium"
        android:textColor="@color/primary_gray_text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/birthdayInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bordered_container"
        android:hint="@string/hint_birthday"
        android:fontFamily="@font/nunito_medium"
        android:textColor="@color/primary_gray_text"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bordered_container"
        android:hint="@string/hint_weight"
        android:fontFamily="@font/nunito_medium"
        android:textColor="@color/primary_gray_text"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bordered_container"
        android:hint="@string/hint_height"
        android:fontFamily="@font/nunito_medium"
        android:textColor="@color/primary_gray_text"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bordered_container"/>

    <Spinner
        android:id="@+id/activitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bordered_container"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBtn"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/save"
        android:background="@drawable/bg_primary_container_cr20"
        app:backgroundTint="@null"
        android:fontFamily="@font/nunito_bold"/>

</LinearLayout>