<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enable_notifications"
            android:fontFamily="@font/nunito_medium"
            android:textSize="16sp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/privacyPolicyLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textColor="?attr/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:fontFamily="@font/nunito_medium" />

    <TextView
        android:id="@+id/thermsOfServiceLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_service"
        android:textColor="?attr/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:fontFamily="@font/nunito_medium" />
</LinearLayout>