<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavContainer" />

    <!-- Bottom nav bar -->
    <FrameLayout
        android:id="@+id/bottomNavContainer"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/navHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_home_blue"
                android:scaleType="fitCenter"
                android:padding="16dp"
                android:contentDescription="@string/home"/>

            <ImageButton
                android:id="@+id/navFoodLog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_food_log_blue"
                android:scaleType="fitCenter"
                android:padding="16dp"
                android:contentDescription="@string/food_log"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/navAssistant"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_light_blue"
                android:scaleType="fitCenter"
                android:padding="16dp"
                android:contentDescription="@string/assistant"/>

            <ImageButton
                android:id="@+id/navAccount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_account_blue"
                android:scaleType="fitCenter"
                android:padding="16dp"
                android:contentDescription="@string/account"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/bg_nav_bar"
            android:src="@drawable/ic_add_white"
            android:scaleType="centerInside"
            android:padding="16dp"
            android:contentDescription="@string/add"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>